prueba de URL automática y adición de funciones en app para robutez

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container mt-5">
         <h2>Formulario de Usuario</h2>
-        <form action="https://galgostesting.onrender.com/submit" method="POST">
+        <form action="{{ url_for('submit') }}" method="POST">
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" required>
